<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.delivery.harness</groupId>
    <artifactId>delivery-harness</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Delivery Harness Engineering Platform</name>
    <description>Reference implementation of an AI harness for on-demand delivery workflows</description>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>

    <modules>
        <module>harness-common</module>
        <module>harness-gateway</module>
        <module>harness-agent</module>
        <module>harness-knowledge</module>
        <module>harness-tool</module>
        <module>harness-llm</module>
        <module>harness-eval</module>
        <module>harness-observe</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- internal modules -->
            <dependency>
                <groupId>com.delivery.harness</groupId>
                <artifactId>harness-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.delivery.harness</groupId>
                <artifactId>harness-llm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.delivery.harness</groupId>
                <artifactId>harness-knowledge</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.delivery.harness</groupId>
                <artifactId>harness-tool</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.delivery.harness</groupId>
                <artifactId>harness-agent</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.delivery.harness</groupId>
                <artifactId>harness-eval</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.delivery.harness</groupId>
                <artifactId>harness-observe</artifactId>
                <version>${project.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- common for all modules -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.mockito</groupId>
                    <artifactId>mockito-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <parameters>true</parameters>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <id>enforce-build-environment</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[17,)</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>[3.6.3,)</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
